Fix: remoção do scrollbar

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -379,6 +379,7 @@ button:hover{
     flex-direction: column;
     margin-top: 50px;
     text-align: center;
+    overflow: hidden;
 }
 .comments-container h2{
     color: var(--text-color-titles);
